--- a/app/src/main/res/drawable/bg_card.xml
+++ b/app/src/main/res/drawable/bg_card.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/surface"/>
-    <corners android:radius="12dp"/>
-    <stroke
-        android:width="1dp"
-        android:color="@color/gray_200"/>
+    <solid android:color="@color/surface" />
+    <stroke android:width="1dp" android:color="@color/gray_200" />
+    <corners android:radius="8dp" />
 </shape>
