--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,20 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Material Design Colors -->
+    <!-- Primary colors -->
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+
+    <!-- Basic colors -->
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <!-- Add these missing colors -->
-    <color name="surface">#FFFFFFFF</color>  <!-- White -->
-    <color name="gray_200">#FFE0E0E0</color>  <!-- Light Gray -->
+    <!-- Custom colors -->
+    <color name="green_primary">#2E7D32</color>
+    <color name="green_primary_dark">#1B5E20</color>
+    <color name="blue_secondary">#0288D1</color>
+    <color name="blue_secondary_dark">#0277BD</color>
 
-    <!-- Optional: Add more colors if needed -->
-    <color name="gray">#FF808080</color>
-    <color name="gray_light">#FFCCCCCC</color>
-    <color name="gray_dark">#FF404040</color>
+    <!-- Grey shades -->
+    <color name="grey_light">#FAFAFA</color>
+    <color name="grey">#E0E0E0</color>
+    <color name="grey_dark">#757575</color>
+    <color name="grey_darker">#424242</color>
+
+    <!-- Text colors -->
+    <color name="text_primary">#000000</color>
+    <color name="text_secondary">#424242</color>
+    <color name="text_hint">#757575</color>
+
+    <!-- Missing colors -->
+    <color name="surface">#FFFFFF</color>
+    <color name="gray_200">#EEEEEE</color>
+
+    <!-- Status colors -->
+    <color name="success_green">#4CAF50</color>
+    <color name="warning_orange">#FF9800</color>
+    <color name="error_red">#F44336</color>
 </resources>
